Started work on MAL auth

--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,8 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/react,node,macos,windows
+
+####
+# App specific stuff
+####
+secrets.js
