--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.6"
+    "express-session": "^1.17.1",
+    "express-session-sqlite": "^2.0.7",
+    "nodemon": "^2.0.6",
+    "sqlite3": "^5.0.0"
   }
 }
