--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/YoCodingJosh/anime_stats#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-session-sqlite": "^2.0.7",
     "nodemon": "^2.0.6",
+    "qs": "^6.7.0",
     "sqlite3": "^5.0.0"
   }
 }
