--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Advanced statistics for MyAnimeList",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "start": "cross-env NODE_ENV=production nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/YoCodingJosh/anime_stats#readme",
   "dependencies": {
     "axios": "^0.21.0",
+    "cross-env": "^7.0.3",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
