--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/YoCodingJosh/anime_stats#readme",
   "dependencies": {
     "axios": "^0.21.0",
+    "body-parser": "^1.19.0",
     "cross-env": "^7.0.3",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
