--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
       "static/js/*"
     ]
   },
+  "engines": {
+    "node": ">=12.0.0",
+    "npm": ">=6.14.10"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/YoCodingJosh/anime_stats.git"
