--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "start": "cross-env NODE_ENV=production node index.js",
+    "start": "cross-env NODE_ENV=production pm2 start index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "nodemonConfig": {
@@ -35,8 +35,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-session-sqlite": "^2.0.7",
-    "forever": "^3.0.4",
     "nodemon": "^2.0.6",
+    "pm2": "^4.5.1",
     "qs": "^6.7.0",
     "serve-favicon": "^2.5.0",
     "sqlite3": "^5.0.0"
