--- a/package.json
+++ b/package.json
@@ -27,18 +27,21 @@
     "url": "https://github.com/YoCodingJosh/anime_stats/issues"
   },
   "homepage": "https://github.com/YoCodingJosh/anime_stats#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.6",
+    "express-session-sqlite": "^2.0.7",
+    "sqlite3": "^5.0.0"
+  },
   "dependencies": {
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
+    "connect-redis": "^5.0.0",
     "cross-env": "^7.0.3",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "express-session-sqlite": "^2.0.7",
-    "nodemon": "^2.0.6",
     "pm2": "^4.5.1",
     "qs": "^6.7.0",
-    "serve-favicon": "^2.5.0",
-    "sqlite3": "^5.0.0"
+    "serve-favicon": "^2.5.0"
   }
 }
