--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express-session": "^1.17.1",
     "pm2": "^4.5.1",
     "qs": "^6.7.0",
+    "redis": "^3.0.2",
     "serve-favicon": "^2.5.0"
   }
 }
