--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
   },
   "homepage": "https://github.com/YoCodingJosh/anime_stats#readme",
   "devDependencies": {
-    "nodemon": "^2.0.6",
-    "express-session-sqlite": "^2.0.7",
-    "sqlite3": "^5.0.0"
+    "nodemon": "^2.0.6"
   },
   "dependencies": {
     "axios": "^0.21.0",
@@ -40,9 +38,11 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "express-session-sqlite": "^2.0.7",
     "pm2": "^4.5.1",
     "qs": "^6.7.0",
     "redis": "^3.0.2",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "sqlite3": "^5.0.0"
   }
 }
