--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     ]
   },
   "engines": {
-    "node": ">=12.0.0",
-    "npm": ">=6.14.10"
+    "node": "12.x",
+    "npm": "6.x"
   },
   "repository": {
     "type": "git",
